k8s/network-policies/allow-inventory-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-graphql-to-inventory-service
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: inventory-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: graphql-gateway
  policyTypes:
    - Ingress
