k8s/network-policies/allow-kafka-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-kafka-exporter
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: kafka-exporter
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
  policyTypes:
    - Ingress
