k8s/network-policies/allow-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-ingress
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: kafka-cluster
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: orders-service
        - podSelector:
            matchLabels:
              app: users-service
        - podSelector:
            matchLabels:
              app: kafka-exporter
  policyTypes:
    - Ingress
