k8s/network-policies/allow-mongo-inventory.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-inventory
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: mongo-inventory
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventory-service
  policyTypes:
    - Ingress
