k8s/network-policies/allow-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: prometheus
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: grafana
  policyTypes:
    - Ingress
