k8s/network-policies/allow-zookeeper.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-to-zookeeper
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: zookeeper
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kafka-cluster
  policyTypes:
    - Ingress
